bootstrap package implemented

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="Vzuh lang translator for russian text"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Вжух!</title>
+    <title>Жужаязык</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
